# coding

./: .clang-format  .gitpod.yml  CMakeLists.txt  README.md  vcpkg.json
calculator/: CMakeLists.txt  calculator.cpp
horses_neigh/: CMakeLists.txt  horses_neigh.cpp
link_list/: CMakeLists.txt
link_list/reverse_link_list/: CMakeLists.txt  reverse_link_list.cpp
